--- a/css/tasks/task2.html
+++ b/css/tasks/task2.html
@@ -118,16 +118,28 @@
         }
         .hi{
             background-color: #5A7670;
-            height: 28px;
+            height: 30px;
             color: white;
             width: 49%;
+            padding-top: 5px;
             
         }
         .hii{
             background-color: #FF9800;
             color: white;
-            height: 28px;
+            height: 30px;
             width: 49%;
+            padding-top: 5px;
+        }
+        .num{
+            color: #FE9900;
+        }
+        span{
+            color: rgb(74, 74, 74);
+        }
+        a{
+            text-decoration: none;
+            color: white;
         }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -145,16 +157,16 @@
         <div class="one" style="color: #FE9900">
             <p> Web Tech</p>
         </div>
-        <div class="two"><i class="fa-solid fa-book"></i> Course: Web Tech
+        <div class="two"><span><i class="fa-solid fa-book"></i>Course: Web Tech</span>
         </div>
-        <div class="three"><i class="fa-solid fa-calendar-day"></i> Date: Today 02:30 PM </div>
-        <div class="four"> <i class="fa-solid fa-clock"></i>Time: Afternoon</div>
-        <div class="five"><i class="fa-solid fa-location-dot"></i> Branch: Bengaluru - Rajajinagar</div>
-        <div class="six"> <i class="fa-solid fa-user-tie"></i>Trainer: Rahul Medhi</div>
-        <div class="seven"><i class="fa-solid fa-phone-flip"></i> Contact: +917760200900</div>
+        <div class="three"><span><i class="fa-solid fa-calendar-day"></i> Date: Today 02:30 PM </span> </div>
+        <div class="four"> <span><i class="fa-solid fa-clock"></i>Time: Afternoon</span></div>
+        <div class="five"><span><i class="fa-solid fa-location-dot"></i> Branch: Bengaluru - Rajajinagar</span></div>
+        <div class="six"> <span><i class="fa-solid fa-user-tie"></i>Trainer: Rahul Medhi</span></div>
+        <div class="seven"><span><i class="fa-solid fa-phone-flip"></i> Contact:</span> <span class="num"> +917760200900</span></div>
         <div class="eight"> 
-            <div class="hi"> <center><i class="fa-solid fa-book-open" style="color: #ffffff;"></i> Course Details </center></div>
-            <div class="hii"><center><i class="fas fa-user-plus fa-lg"></i>  Enroll</center></div>
+            <div class="hi"> <center><i class="fa-solid fa-book-open" style="color: #ffffff;"></i> <a href="https://jspiders.com/courses" target="_blank">Course Details</a> </center></div>
+            <div class="hii"><center><i class="fas fa-user-plus fa-lg"></i> <a href="https://student.qspiders.com/registration" target="_blank"> Enroll</a></center></div>
         </div>
     </div>
 
