--- a/css/tasks/task2.html
+++ b/css/tasks/task2.html
@@ -165,8 +165,8 @@
         <div class="six"> <span><i class="fa-solid fa-user-tie"></i>Trainer: Rahul Medhi</span></div>
         <div class="seven"><span><i class="fa-solid fa-phone-flip"></i> Contact:</span> <span class="num"> +917760200900</span></div>
         <div class="eight"> 
-            <div class="hi"> <center><i class="fa-solid fa-book-open" style="color: #ffffff;"></i> <a href="https://jspiders.com/courses" target="_blank">Course Details</a> </center></div>
-            <div class="hii"><center><i class="fas fa-user-plus fa-lg"></i> <a href="https://student.qspiders.com/registration" target="_blank"> Enroll</a></center></div>
+            <div class="hi"> <center><i class="fa-solid fa-book-open" style="color: #ffffff;"></i> <a href="https://www.facebook.com/rahul.smartboy.9/?show_switched_toast=0&show_invite_to_follow=0&show_switched_tooltip=0&show_podcast_settings=0&show_community_review_changes=0&show_community_rollback=0&show_follower_visibility_disclosure=0" target="_blank">Course Details</a> </center></div>
+            <div class="hii"><center><i class="fas fa-user-plus fa-lg"></i> <a href="https://www.instagram.com/__rahul_rd/?hl=en" target="_blank"> Enroll</a></center></div>
         </div>
     </div>
 
